# langextract

benchmarks/: fuzzy_benchmark.py
rust/: .gitignore  CLAUDE.md  Cargo.toml
rust/crates/langextract/: Cargo.toml
rust/crates/langextract-aligner/: Cargo.toml
rust/crates/langextract-aligner/src/: align.rs  diagnostics.rs  error.rs  fuzzy.rs  lib.rs  normalize.rs
rust/crates/langextract-aligner/tests/: align.rs
rust/crates/langextract-chunking/: Cargo.toml
rust/crates/langextract-chunking/src/: chunk.rs  error.rs  iter.rs  lib.rs  sentence.rs
rust/crates/langextract-chunking/tests/: chunking.rs
rust/crates/langextract-core/: Cargo.toml
rust/crates/langextract-core/src/: cli_adapter.rs  data.rs  error.rs  format.rs  lib.rs  model.rs
rust/crates/langextract-format/: Cargo.toml
rust/crates/langextract-format/src/: error.rs  fence.rs  handler.rs  lib.rs  records.rs
rust/crates/langextract-format/tests/: parse_and_format.rs  records.rs
rust/crates/langextract-prompting/: Cargo.toml
rust/crates/langextract-prompting/src/: builder.rs  error.rs  generator.rs  lib.rs  template.rs
rust/crates/langextract-prompting/tests/: prompting.rs
rust/crates/langextract-tokenizer/: Cargo.toml
rust/crates/langextract-tokenizer/src/: error.rs  lib.rs  regex_tokenizer.rs  sentence.rs  types.rs
rust/crates/langextract-tokenizer/tests/: tokenize.rs
rust/crates/langextract/examples/: irs_1040_demo.rs
rust/crates/langextract/src/: batch.rs  cache.rs  checkpoint.rs  error.rs  lib.rs  pipeline.rs  report.rs  request.rs  retry.rs
rust/crates/langextract/tests/: end_to_end.rs
tests/: fuzzy_alignment_cases_test.py
