[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/mwatts/langextract"
rust-version = "1.85"

[workspace.dependencies]
# Core library deps
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

# Async runtime primitives — runtime-agnostic primitives from tokio,
# usable from any async runtime (async-std, smol, tokio).
tokio = { version = "1", default-features = false, features = ["sync"] }

# Runtime-agnostic future combinators (join_all etc.) so that the core
# crate doesn't need to know which async runtime the consumer uses.
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await-macro"] }

# Diff / LCS library used by the aligner. Rust equivalent of Python's
# difflib.SequenceMatcher; exposes matching-block operations over generic
# slices.
similar = { version = "3", default-features = false }

# Structured logging / tracing for the facade pipeline. Using the
# `tracing` crate means consumers can wire in their own subscriber
# (tracing-subscriber, tracing-opentelemetry, etc.) without the
# library caring.
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }

# Content-addressed cache keys for the chunk cache. We hash
# (description + chunk_text) to a stable content identifier.
sha2 = "0.10"

# Async primitives beyond the runtime-agnostic ones we already use.
# Imported via a workspace entry so every crate can reference the
# same futures version.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# JSON Lines serialisation format for the checkpoint's default
# on-disk backend.
serde_json = "1"

# Dev / test
pretty_assertions = "1"
