[package]
name = "langextract-chunking"
description = "Split long documents into sentence-aware chunks that fit a language model's context window. Rust port of langextract/chunking.py."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
langextract-core = { path = "../langextract-core", default-features = false }
langextract-tokenizer = { path = "../langextract-tokenizer" }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
