[package]
name = "langextract-format"
description = "JSON/YAML output formatting and model-output parsing for the Rust port of langextract. Ports langextract/core/format_handler.py."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
langextract-core = { path = "../langextract-core", default-features = false }
serde = { workspace = true }
# `preserve_order` makes serde_json::Map iterate in insertion order, which
# matches Python dict iteration and is load-bearing for
# extract_ordered_extractions: duplicate index values preserve source
# order in the final sorted output, and models may emit class fields in
# a user-meaningful sequence that would otherwise be alphabetized.
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
