[package]
name = "langextract-prompting"
description = "Few-shot prompt construction for the Rust port of langextract: structured templates, QA-style rendering, and context-aware cross-chunk builders."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
langextract-core = { path = "../langextract-core", default-features = false }
langextract-format = { path = "../langextract-format" }
serde = { workspace = true }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
