[package]
name = "langextract"
description = "Rust port of langextract — a library for extracting structured data from language models with precise source grounding. Top-level facade that composes the langextract-* focused crates into a single extract() entry point."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["cli-adapter"]

# Forwards to langextract-core's `cli-adapter` feature, which pulls in
# the CliRunner trait and CliLanguageModel wrapper. Opt out with
# `default-features = false` if you only want the data types, the
# pipeline, and the public trait but none of the CLI glue.
cli-adapter = ["langextract-core/cli-adapter"]

[dependencies]
langextract-aligner = { path = "../langextract-aligner" }
langextract-chunking = { path = "../langextract-chunking" }
langextract-core = { path = "../langextract-core", default-features = false }
langextract-format = { path = "../langextract-format" }
langextract-prompting = { path = "../langextract-prompting" }
langextract-tokenizer = { path = "../langextract-tokenizer" }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = { workspace = true }
regex = "1"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
